$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2017

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added discrete filter drive caller
		- added drive caller constitutive law wrapper
		- added support for NetCDF4 (Louis Gagnon)
	Backward compatibility issues:
	Known issues:
	Bug fixes:
		- fix TotalPinJoint assembly (Eduardo Okabe)
		- fix eigenanalysis before derivatives
		- fix initialization (Reinhard Resch)
		- fix one-time leak in axial wrapper
		- fix inconsistency in step drive callers docs

MBDyn 1.7.3
	Enhancements:
		- added network byte order to drivers & element output streams
		- added width/format for eigenanalysis output files
		  (noted by Reinhard Resch)
		- added relative output of follower force/couple
		- refactored communication code (stream drivers and output
		  elements) to support user-defined communicators (Luca Conti
		  for GSoC 2017)
		- added module-flightgear (Luca Conti for GSoC 2017)
		- added automatic derivatives coefficient estimation
		  (Reinhard Resch)
	Backward compatibility issues:
		- got rid of adams and motionview output support
		- deprecated "drees 2" rotor inflow model (identical to
		  "dreese")
	Known issues:
	Bug fixes:
		- fixed (harmless?) off-by-one read in fixed step drive
		- fixed bugs in timestep control (Reinhard Resch)
		- fixed default max time step (Reinard Resch)
		- fixed build without libmbc (noted by Richard Crozier)
		- fixed test if residual is NaN (Reinard Resch)
		- fixed error message in strext (Richard Crozier)
		- fixed typos and strengthened rotor inflow models

MBDyn 1.7.2
	Enhancements:
		- added contrib/Post (Marco Morandini)
		- added python input file pre-processing (Marco Morandini)
		- added support for Functional Mockup Interface (FMI) model