@@ -379,7 +379,7 @@ DriveHandler::SetVar(const doublereal& dVar)
 }
 
 
-#ifndef USE_EE
+#ifdef DO_NOT_USE_EE
 doublereal
 DriveHandler::dGet(InputStream& InStr) const
 {
@@ -424,7 +424,7 @@ DriveHandler::dGet(InputStream& InStr) const
 
 	return d;
 }
-#endif // ! USE_EE
+#endif // DO_NOT_USE_EE
 
 DriveHandler::MyRand::MyRand(unsigned int uLabel, integer iS, integer iR)
 : MyMeter(uLabel, iS), iRand(iR)
